--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         </header>
         
         <div class="description">
-            <p>Едно голямо семейство</p>
+            <p>Тук ще откриете снимки и моменти, които разказват историята на нашето пътуване до 10-ти клас. Все още не сме приключили с дългия път, но тези спомени ни напомнят как изминахме първите стъпки в училището и как сме преминали през различни моменти заедно. Надяваме се, че ще се усмихнете, като се върнете към тях.</p>
         </div>
         
         <div class="gallery">
